---
source: src/tests/import.rs
expression: output
---
audits.toml: (unchanged)
config.toml:
 
 # cargo-vet config file
 
 [cargo-vet]
 version = "1.0"
 
 [imports.peer-company]
 url = "https://peercompany.co.uk"
 
 [[exemptions.third-party1]]
 version = "10.0.0"
 criteria = "safe-to-deploy"
 
-[[exemptions.third-party2]]
-version = "10.0.0"
-criteria = "safe-to-deploy"
-
 [[exemptions.transitive-third-party1]]
 version = "10.0.0"
 criteria = "safe-to-deploy"

imports.lock:
 
 # cargo-vet imports lock
 
 [[audits.peer-company.audits.third-party1]]
 criteria = "safe-to-deploy"
 delta = "10.0.0 -> 100.0.0"
 
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+version = "10.0.0"
+
 [[audits.peer-company.audits.unused-crate]]
 criteria = "safe-to-deploy"
 version = "10.0.0"


